--- a/info/keys.texi
+++ b/info/keys.texi
@@ -406,10 +406,10 @@
  emacspeak-websearch-google-with-toolbelt
 
 @item :
- emacspeak-wizards-view-buffers-filtered-by-m-player-mode
+ emacspeak-m-player-using-openal
 
 @item ;
- emacspeak-m-player-using-openal
+ emacspeak-multimedia
 
 @item C-a
  emacspeak-wizards-term
