--- a/info/docs.texi
+++ b/info/docs.texi
@@ -5060,7 +5060,7 @@ Display link under point as an @code{RSS} feed.
 @command{emacspeak-feeds-atom-display}
 Display link under point as an @code{ATOM} feed.
 @item y
-@command{emacspeak-m-player-youtube-player}
+@command{emacspeak-mpv-play-url}
 Play link under point as a Youtube stream.
 @end table
 
