--- a/info/docs.texi
+++ b/info/docs.texi
@@ -8505,6 +8505,7 @@ d		emacspeak-m-player-delete-filter
 e		emacspeak-m-player-equalizer-preset
 f		emacspeak-m-player-add-filter
 g		emacspeak-m-player-seek-absolute
+h		emacspeak-m-player-from-history
 i		emacspeak-m-player-stream-info
 j		emacspeak-m-player-amark-jump
 k		emacspeak-m-player-quit
@@ -9021,6 +9022,7 @@ d		emacspeak-m-player-delete-filter
 e		emacspeak-m-player-equalizer-preset
 f		emacspeak-m-player-add-filter
 g		emacspeak-m-player-seek-absolute
+h		emacspeak-m-player-from-history
 i		emacspeak-m-player-stream-info
 j		emacspeak-m-player-amark-jump
 k		emacspeak-m-player-quit
