--- a/info/web-browsing.texi
+++ b/info/web-browsing.texi
@@ -5,6 +5,8 @@ Note that there is newer material at
 and in @xref{emacspeak-eww}.
 For Emacs 24.4 and later, note that the built-in Web browser EWW is also
 the browser of choice for emacspeak. 
+Finally, note that Emacs/W3 is now considered obsolete, and
+Emacspeak support for w3m is no longer maintained.
 
 
 
