--- a/info/docs.texi
+++ b/info/docs.texi
@@ -7969,16 +7969,17 @@ stream.  Once a stream is playing, you can control it with
 single-letter keystrokes in the @code{*M-Player*} buffer.
 Alternatively, you can switch away from that buffer to do real
 work, And invoke @code{m-player} commands by first pressing
-@kbd{C-e ;}.  If your Emacs supports @code{repeat-mode}, ---
-@xref{repeating, , , emacs} you can avoid the need to press @code{C-e
-} each time; with @code{repeat-mode} active, you only need to
-press the prefix @code{C-e ;} the first time; subsequent
-invocations can happen via single-letter presses as long as they
-are performed in a sequence.  As an example, pressing @kbd{v} in
-the @code{*M-Player*} buffer prompts for and sets the volume; When
-not in the @code{*M-Player*} buffer, you can achieve the same by
-pressing @kbd{C-e ; v}.  Press @kbd{C-h b} in the @code{*M-Player*}
-buffer to list @code{m-player} keybindings.
+prefix-key @kbd{C-e ;}.  If your Emacs supports @code{repeat-mode},
+--- @xref{repeating, , , emacs} you can avoid the need to
+repeatedly press the prefix-key @code{C-e ;} each time; with
+@code{repeat-mode} active, you only need to press the prefix
+@code{C-e ;} the first time; subsequent invocations can happen via
+single-letter presses as long as they are performed in a sequence.
+As an example, pressing @kbd{v} in the @code{*M-Player*} buffer
+prompts for and sets the volume; When not in the @code{*M-Player*}
+buffer, you can achieve the same by pressing @kbd{C-e ; v}.  Press
+@kbd{C-h b} in the @code{*M-Player*} buffer to list @code{m-player}
+keybindings.
 
 @subsection Emacspeak-M-Player Commands
 
