--- a/info/docs.texi
+++ b/info/docs.texi
@@ -5063,6 +5063,8 @@ Copy URL under point to the kill-ring.
 @item ;
 @command{emacspeak-eww-play-media-at-point}
 Play media URL under point using @code{emacs-m-player}.
+Handles URL fragment as time-stamp where we resume; use @kbd{J} in
+M-Player to jump to that offset.
 @item U
 @command{emacspeak-eww-curl-play-media-at-point}
 Play media url under point by first downloading the URL using
@@ -5687,6 +5689,9 @@ arg ‘delete’, delete that mark instead.
 
 @format
 Play media url under point.
+Interprets url-fragment identifier #nnn as time-offset in seconds.
+Use command ‘emacspeak-m-player-jump-action’ bound to ’J’ in m-player
+  interaction to move to that offset.
 Optional interactive prefix arg ‘playlist-p’ treats
  link as a playlist.  A second interactive prefix arg adds
  mplayer option -allow-dangerous-playlist-parsing
